# association-backend

./: .dockerignore  .env.example  .env.test  .gitignore  .releaserc.json  .renovaterc.json  CHANGELOG.md  CI_FINAL_STATUS.md  CI_FIX_SUMMARY.md  CI_STATUS.md  DOCKER_SETUP.md  Dockerfile  HERMIT.md  QUICKSTART.md  README.md  RENOVATE.md  SETUP_NOTES.md  alembic.ini  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml  renovate.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/application/dtos/: user_dto.py
app/application/use_cases/: create_user.py
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/domain/value_objects/: email.py
app/infrastructure/: __init__.py  database.py
app/infrastructure/models/: user.py
app/infrastructure/repositories/: user_repository_impl.py
app/presentation/api/v1/: users.py
app/presentation/schemas/: error.py  user.py
config/authelia/: configuration.yml  users_database.yml
init-scripts/: 01-create-databases.sh
migrations/: env.py  script.py.mako
tests/: __init__.py  conftest.py
tests/integration/api/: test_health.py
tests/unit/application/: test_create_user_use_case.py
tests/unit/domain/: test_email_value_object.py  test_user_entity.py
